--- a/src/app/components/utilities/richtext.scss
+++ b/src/app/components/utilities/richtext.scss
@@ -8,7 +8,6 @@
   > h2,
   > h3 {
     font-weight: bold;
-    line-height: 1.294117647;
     text-transform: none;
     font-family: var(--od-font-stack-serif);
   }
@@ -17,15 +16,6 @@
     clear: both;
     margin-left: auto;
     margin-right: auto;
-  }
-
-  > h4,
-  > p,
-  > ul li,
-  > ol li,
-  > blockquote {
-    font-size: var(--od-font-size);
-    line-height: 1.555555556;
   }
 
   > ul,
@@ -229,11 +219,19 @@
       }
     }
 
+    > h1,
+    > h2,
+    > h3 {
+      line-height: 1.294117647;
+    }
+
     > h4,
     > p,
     > ul li,
     > ol li,
     > blockquote {
+      font-size: var(--od-font-size);
+      line-height: 1.555555556;
       @media #{$mq-gt-sm} {
         line-height: 1.666666667;
       }
@@ -379,13 +377,25 @@
 :where(.is-future) {
   [class*='u-richtext'] {
     > * {
+      font-size: var(--od-font-size);
       color: var(--od-colour-text-primary);
-      margin-top: 0;
-      margin-bottom: $unit * 1.25;
+      margin-top: var(--od-space-paragraph-margin);
+      margin-bottom: var(--od-space-paragraph-margin);
+      line-height: var(--od-line-height);
+    }
 
-      @media #{$mq-gt-sm} {
-        margin-bottom: $unit * 1.5;
-      }
+    h1 {
+      font-size: var(--od-font-size-heading-lg);
+    }
+
+    h2 {
+      font-size: var(--od-font-size-heading-md);
+      margin-top: var(--od-space-component-margin);
+    }
+
+    h3 {
+      font-size: var(--od-font-size-heading-sm);
+      margin-top: var(--od-space-component-margin);
     }
 
     a:any-link,
